meanjs/public/modules/core/css/core.css
.content {
	margin-top: 50px;
}
.undecorated-link:hover {
	text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}
.ng-invalid.ng-dirty {
	border-color: #FA787E;
}
.ng-valid.ng-dirty {
	border-color: #78FA89;
}

.border-red {
    /*outline: 2px #d9534f solid;*/
    -moz-box-shadow: 1px 1px 20px #d9534f;
    -webkit-box-shadow: 1px 1px 20px #d9534f;
    box-shadow: 1px 1px 20px #d9534f;
}

.border-green {
    /*border: 3px #5cb85c solid;*/
    color: green;
}

.accordion-toggle:hover {
    color: rgb(10,10,10); /*fall back for browsers that don't support RGBA*/
    color: rgba(0,0,0,0.6);
    text-decoration: none;
    cursor: pointer;
}

.badge {
    background-color: rgb(49,115,173);
}

.active-badge {
    background-color: white;
    color: rgb(44,44,44);
}

.no-select {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.cursor-pointer {
    cursor: pointer;
}

